# skiller

./: .env.development  .env.example  .gitignore  BACKLOG.md  CHANGELOG.md  DONE.md  README.md  pyproject.toml  steps.yaml  test.json
apps/tui/: pyproject.toml
apps/tui/docs/: architecture.md  rules-code-style.md  status-view.md  transcript-spec.md  usecase-definition.md
apps/tui/src/stui/: __init__.py  __main__.py  app.py  app_version.py
apps/tui/src/stui/adapter/: agent_interrupt_mapper.py  agent_stats_mapper.py  cli_agent_adapter.py  cli_agent_interrupt.py  cli_agent_stats.py  cli_invoker.py  cli_models_adapter.py  cli_notify_action_adapter.py  cli_run_adapter.py  cli_runs_adapter.py  cli_waiting_adapter.py  default_agent_port.py  default_events_port.py  default_installation_state_port.py  default_notify_action_port.py  default_run_port.py  default_runs_port.py  default_waiting_port.py  file_session_store_adapter.py  mock_models_adapter.py  polling_event_observer.py  run_event_mapper.py
apps/tui/src/stui/di/: container.py  strings.py
apps/tui/src/stui/mock/: models.json
apps/tui/src/stui/port/: agent_port.py  event_models.py  event_port.py  installation_state_port.py  models_port.py  notify_action_port.py  run_port.py  runs_port.py  session_store_port.py  waiting_port.py
apps/tui/src/stui/screen/: action_open_url_view.py  agent_context_stats_view.py  autocomplete_view.py  console_screen.py  footer_context_view.py  markdown.py  models_table_view.py  notify_action_view.py  prompt.py  render.py  runs_table_view.py  screen_status_view.py  strings.py  theme.py  transcript_log.py
apps/tui/src/stui/usecase/: __init__.py  agent_status_use_case.py  auth_command_use_case.py  autocomplete_use_case.py  done_notify_action_use_case.py  event_state_use_case.py  event_transcript_mapper.py  get_intro_post_command_use_case.py  get_run_action_use_case.py  interrupt_agent_turn_use_case.py  list_models_use_case.py  list_runs_use_case.py  load_session_from_post_use_case.py  log_event_reducer_use_case.py  move_completion_use_case.py  normalize_command_use_case.py  open_notify_action_use_case.py  polling_event_reducer_use_case.py  project_agent_usage_use_case.py  project_notify_action_use_case.py  project_transcript_use_case.py  prompt_enter_use_case.py  refresh_agent_context_stats_use_case.py  refresh_footer_context_use_case.py  resume_console_use_case.py  run_command_use_case.py  run_event_context.py  run_finished_action_use_case.py  select_model_use_case.py  select_runs_table_row_use_case.py  (+4 more)
apps/tui/tests/: conftest.py  support.py  test_app_version.py
apps/tui/tests/adapter/: test_cli_agent_adapter.py  test_cli_log_event_adapter.py  test_cli_models_adapter.py  test_cli_notify_action_adapter.py  test_cli_run_adapter.py  test_cli_runs_adapter.py  test_cli_waiting_adapter.py  test_default_agent_port.py  test_default_events_port.py  test_default_installation_state_port.py  test_default_notify_action_port.py  test_default_run_port.py  test_default_runs_port.py  test_file_session_store_adapter.py  test_logs_event_observer.py  test_polling_event_observer.py  test_run_event_mapper.py
apps/tui/tests/screen/: test_action_open_url_view.py  test_agent_context_stats_view.py  test_autocomplete_view.py  test_console_screen.py  test_console_screen_integration.py  test_footer_context_view.py  test_markdown.py  test_models_table_view.py  test_notify_action_view.py  test_prompt.py  test_render.py  test_render_transcript.py  test_runs_table_view.py  test_screen_status_view.py  test_theme.py  test_transcript_log.py
apps/tui/tests/usecase/: test_agent_status_use_case.py  test_auth_command_use_case.py  test_autocomplete_use_case.py  test_done_notify_action_use_case.py  test_event_state_use_case.py  test_event_transcript_mapper.py  test_get_intro_post_command_use_case.py  test_get_run_action_use_case.py  test_interrupt_agent_turn_use_case.py  test_list_models_use_case.py  test_list_runs_use_case.py  test_load_session_from_post_use_case.py  test_log_event_reducer_use_case.py  test_move_completion_use_case.py  test_normalize_command_use_case.py  test_open_notify_action_use_case.py  test_polling_event_reducer_use_case.py  test_project_agent_usage_use_case.py  test_project_notify_action_use_case.py  test_project_transcript_use_case.py  test_prompt_enter_use_case.py  test_refresh_footer_context_use_case.py  test_resume_console_use_case.py  test_run_command_use_case.py  test_run_event_context.py  test_run_finished_action_use_case.py  test_select_model_use_case.py  test_select_runs_table_row_use_case.py  test_start_console_use_case.py  test_submit_waiting_input_use_case.py  test_toggle_agent_stats_use_case.py  test_unsupported_input_use_case.py
apps/tui/tests/viewmodel/: test_console_screen_viewmodel.py  test_port_to_viewmodel.py
(+613 files in other folders)
