[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "agent-runtime-poc"
version = "1.0.0-alpha.6"
description = "Skiller runtime: CLI + Webhooks + MCP + Skills"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Team" }]
dependencies = [
  "pydantic>=2.8.0",
  "PyYAML>=6.0.1",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "fastmcp>=2.10.0",
  "prompt_toolkit>=3.0.36",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[project.scripts]
agent = "skiller.interfaces.cli.main:main"
skiller = "skiller.interfaces.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skiller"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
  "unit: fast isolated unit tests",
  "integration: integration tests with component boundaries",
  "e2e: end-to-end tests",
  "smoke: fast end-to-end smoke checks"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
