[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "skiller"
version = "0.1.0-beta.17"
description = "Skiller.run agentic workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Team" }]
dependencies = [
  "pydantic>=2.8.0",
  "PyYAML>=6.0.1",
  "boto3>=1.43.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "fastmcp>=2.10.0",
  "openai>=1.0.0",
  "textual>=0.80.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff==0.15.4",
]

[project.scripts]
skiller = "skiller.interfaces.cli.main:main"
stui = "stui.app:main"

[tool.hatch.build]
dev-mode-dirs = ["packages/skiller/src", "apps/tui/src"]

[tool.hatch.build.targets.wheel]
packages = ["packages/skiller/src/skiller", "apps/tui/src/stui"]

[tool.hatch.build.targets.wheel.force-include]
"packages/skiller/agents" = "skiller/agents"
"packages/skiller/docs" = "skiller/docs"

[tool.pytest.ini_options]
testpaths = ["packages/skiller/tests", "apps/tui/tests"]
addopts = "--strict-markers"
markers = [
  "unit: fast isolated unit tests",
  "integration: integration tests with component boundaries",
  "e2e: end-to-end tests",
  "smoke: fast end-to-end smoke checks"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["skiller", "stui"]
