[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "stui"
version = "1.0.0-beta.1"
description = "Skiller Textual UI app"
readme = "docs/architecture.md"
requires-python = ">=3.11"
authors = [{ name = "Team" }]
dependencies = [
  "textual>=0.80.0",
]

[project.scripts]
stui = "stui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/stui"]
